# lowe

./: CMakeLists.txt
exe/eventdisplay/: eventdisplay.cc  eventdisplay_image.cc  eventdisplay_moment.cc  eventdisplay_sum.cc
exe/goodness/: Goodness.cc  GoodnessMinimize.cc  goodness_bias_err.cc  goodness_time_and_position_exe.cc  imagegoodness.cc
exe/likelihood/: LikelihoodDirection.cc
exe/others/: distance_image.cc  efficiency.cc  test.cc  tof_exe.cc
funcparts/include/: distance_function.hh  fdirection.hh  fgoodnessdirection.hh  fsumgoodness.hh  likelihood.hh  likelihoodtof.hh  numberofhit.hh  tof.hh
funcparts/src/: distance_function.cc  distance_pmt.cc  fsumgoodness.cc  likelihood.cc
general/include/: Reconstructdata.hh  hitinfo.hh  runoption.hh  wrapped_function.hh
general/src/: runoption.cc  wrapped_function.cc
goodness/include/: GoodnessCalculateManager.hh  GoodnessCalculated.hh  GoodnessEvent.hh  GoodnessEventManager.hh  GoodnessManager.hh  GoodnessMinimizeRunAction.hh  GoodnessParameters.hh  GoodnessRunAction.hh  OneGoodnessCalculated.hh  one_goodness.hh
goodness/src/: GoodnessCalculateManager.cc  GoodnessEventAction.cc  GoodnessEventManager.cc  GoodnessManager.cc  GoodnessMinimizeRunAction.cc  GoodnessParameters.cc  GoodnessRunAction.cc  OneGoodnessCalculateManager.cc  OneGoodnessCalculated.cc  goodness_x_f_direction.cc  one_goodness.cc
grad/include/: runopgrad.hh
grad/src/: loopgrad.cc  runopgrad.cc
include/funcparts/: distance_pmt.hh  eventdisplay_func.hh  theta_i_func.hh
include/general/: C4Number.hh  CSearch_range.hh  config.hh  constants.hh
include/goodness/: WCGoodness_calculate.hh  goodness_bias_err_func.hh  goodness_data.hh  goodness_given_4Vector.hh  goodness_x_f_direction.hh
include/grad/: grad_data.hh  loopgrad.hh
include/likelihood/: acceptance_pmt.hh  f_direction.hh  get_function_direction_func.hh  likelihood_direction_data.hh
include/nambda4logL/: dlogLdt.h  dlogLdx.h  dlogLdy.h  dlogLdz.h  logL.h  loopnambda4logL.h  nambda4logL.h
likelihood/include/: LikelihoodDirectionCalculateManager.hh  LikelihoodDirectionCalculated.hh  LikelihoodDirectionEvent.hh  LikelihoodDirectionEventAction.hh  LikelihoodDirectionEventManager.hh  LikelihoodDirectionManager.hh  LikelihoodDirectionParameters.hh  LikelihoodDirectionRun.hh  LikelihoodDirectionRunAction.hh  OneLikelihoodDirectionCalculateManager.hh  OneLikelihoodDirectionCalculated.hh  acceptance_pmt.hh  f_direction.hh  likelihood_direction.hh  likelihood_direction_grid_search.hh
likelihood/src/: LikelihoodDirectionCalculateManager.cc  LikelihoodDirectionEventAction.cc  LikelihoodDirectionEventManager.cc  LikelihoodDirectionManager.cc  LikelihoodDirectionRunAction.cc  OneLikelihoodDirectionCalculateManager.cc  acceptance_pmt.cc  f_direction.cc  likelihood_direction.cc  likelihood_direction_grid_search.cc
macro/include/: AnalizeFile.hh  AnalizeManager.hh  AngleRange.hh  BiasError.hh  FileManager.hh  MultiRunAnalizeManager.hh  OneDataParameters.hh  OneGoodnessParameters.hh  OneLikelihoodParameters.hh  OneRunAnalizeManager.hh  OneRunDataAnalizeManager.hh  OneRunGoodnessMinimizeAnalizeManager.hh  OneRunLikelihoodAnalizeManager.hh  TReconstructdata.hh  Tafunction.hh  Tfunction.hh  Thitinfo.hh  Ttof.hh  constants.hh  eventdisplay_edge.hh  macroRootLinkDef.hh
macro/src/: AnalizeFile.cc  AnalizeManager.cc  FileManager.cc  MultiRunAnalizeManager.cc  OneDataParameters.cc  OneGoodnessParameters.cc  OneLikelihoodParameters.cc  OneRunAnalizeManager.cc  OneRunDataAnalizeManager.cc  OneRunGoodnessAnalizeManager.cc  TReconstructdata.cc  Tdistance_function.cc  Tfunction.cc  eventdisplay_edge.cc  f_direction_func.cc  macroRootDict.cxx  macroRootDict.h
python/macro/: __init__.py  filemanager.py
src/funcparts/: eventdisplay_func.cc  numberofhit.cc  theta_i_func.cc
src/general/: C4Number.cc  CSearch_range.cc  config.cc
src/goodness/: WCGoodness_calculate.cc  goodness_bias_err_func.cc  goodness_data.cc  goodness_given_4Vector.cc  goodness_x_f_direction.cc
src/grad/: grad_data.cc
src/likelihood/: acceptance_pmt.cc  f_direction.cc  get_function_direction_func.cc  likelihood_direction.cc  likelihood_direction_data.cc
src/others/: ReverseYAxis.cc
virtual/include/: EventManager.hh  Paramters.hh  Process.hh  ProcessManager.hh  RunManager.hh  VEvent.hh  VEventAction.hh  VLoop1.hh  VLoop1Action.hh  VLoop1Manager.hh  VLoop2.hh  VLoop2Action.hh  VLoop2Manager.hh  VParameters.hh  VRun.hh  VRunAction.hh
virtual/src/: EventManager.cc  OneLikelihoodDirectionCalculateManager.cc  RunManager.cc  VEventAction.cc  VLoop1Action.cc  VLoop1Manager.cc  VLoop2Action.cc  VLoop2Manager.cc  VRunAction.cc
